feat: added token validation and fixed some typos
